2003-02-04  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/config.c: Added "tr" (Turkish) to the languages' list.

2003-02-03  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" (Turkish) to the languages' list.

2003-02-02  bruno  <bruno.coudoin@free.fr>

	* src/boards/enumerate.c: (item_event): Now object cannot be dropped outside the canvas
	* src/gcompris/gcompris.c: (board_widget_key_press_callback): removed old comment
	* TESTS: removed the comment on enumerate

2003-02-01  Pascal Georges <pascal.georges1@free.fr>
	*	src/gcompris/soundutil.c : as train.wav could not be played (/dev/dsp
  busy error), modified it to be played as an ogg file

2003-01-29  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/missingletter.c : added more questions (now 36)
	* src/boards/imageid.c : added more questions (not enough yet ...)

2003-01-28  Pascal Georges <pascal.georges1@free.fr>
	* src/gcompris/gcompris.c : fixed sound init (when music is off, the fx sound was also off ...)
	* src/boards/missingletter.c : added more questions (30 instead of 8)

2003-01-27  bruno  <bruno.coudoin@free.fr>

	* boards/boardicons/gletters.png: better icon
	* boards/boardicons/wordsgame.png: better icon
	* boards/wordsgame/wordslevelmax.fr: re-added removed words
	* src/boards/clockgame.c: (clockgame_create_item): changed title size
	* src/boards/wordsgame.c: (key_press), (wordsgame_create_item): fixed utf-8 input issue

2003-01-26  bruno  <bruno.coudoin@free.fr>

	* boards/Makefile.am: Added babyshapes (thanks Pascal)
	* boards/gcompris/misc/.cvsignore: needed
	* configure.in: added pt and the Amharic Language
	* src/boards/traffic.c: fixed null gettect string

2003-01-26  Daniel Yacob  <locales@geez.org>

	* configure.in: Added "am" to ALL_LINGUAS.
	
2003-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS.
	
2003-01-18  bruno  <bruno.coudoin@free.fr>

	* boards/algebra_group.xml.in: removed no more needed data tags