@@ -1,20 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<GCompris>
-  <Board 
-	 name="machpuzzle"
-	 type="machpuzzle" 
-	 section="/boards/."
-	 icon="boardicons/erase.png" 
-	 difficulty="1"
-	 author="Bruno Coudoin (bruno.coudoin@free.fr)"
-	 boarddir="">
-	 <_title>The incredible machine</_title>
-	 <_description></_description>
-	<_prerequisite></_prerequisite>
-	<_goal></_goal>
-	 <_manual>
-	 </_manual>
-	 <_credit>
-	 </_credit>
-  </Board>
-</GCompris>
