@@ -1,0 +1,23 @@
+#!/bin/sh
+
+str=core-translation-report
+cat <<__EOF__ >$str
+*** PO/core/gettext translation report: ***
+(Absence of a language code means 0% translation for that language)
+(Help for translations (and/or much more) is of course welcome !)
+(A star after a language's statistics means that the translation file isn't
+ up to date with the POT (original messages) file)
+
+Entry format:
+   country_code percentage% (translated,fuzzy,total)
+
+translated includes fuzzy entries.
+
+__EOF__
+./po-checktrans.py $* >>$str || cat <<__EOF__ >>$str
+E: po-checktrans failed to run. Please check that python is installed
+E: on your system. 
+__EOF__
+
+cat $str
+exit 0
